# docktuna

./: .gitattributes  .gitignore  404.html  README.md  build_docker.sh  coverage.xml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
docker/: .env  .env.example  Dockerfile  docker-compose.gpu.yml  docker-compose.yml
docker/app/: .env.example  Dockerfile  docker-compose.yml  pkglist
docker/databases/: optuna_db.env  tuning_dbs.env
docker/docktuna/: .env  .env.example  Dockerfile  docker-compose.yml
docker/image_resources/components/create_sudo_user/: main.sh
docker/optuna_db/pg_init_scripts/: create_multiple_postgresql_databases.sh
docker/pg_init_scripts/: create_multiple_postgresql_databases.sh
docs/: api.md  index.md
search/: search_index.json
site/: index.html
src/docktuna/: gpu_tune.py  simple_tune.py
src/docktuna/optuna_db/: db_instance.py  optuna_db.py
src/docktuna/tuning_db/: db_instance.py  optuna_db_new.py  tuning_studies_database.py
src/dopg/tuning_db/: tuning_studies_database.py
src/my_app/tuning_db/: test_tuning_study_dbs.py  tuning_studies_database.py
test/: check_connections.py  test_db_instance.py  test_optuna_db.py  test_tuning_scripts.py  test_tuning_studies_database.py  test_tuning_study_dbs.py
tuning_db/: simple_tune.py  tuning_studies_database.py
unused/: model_tuning_db_name.txt  postgres_dbs_host.txt
