
[tool.poetry]
name = "docker-optuna-postgres"
version = "0.1.0"
description = "Only managing dependencies"
authors = ["Your Name <you@example.com>"]
package-mode = false  # prevents packaging code

[tool.poetry.dependencies]
python = "^3.11"
black = "^25.1.0"
dotenv = "^0.9.9"
isort = "^6.0.1"
optuna = "^4.2.1"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

