
[tool.poetry]
name = "dopg"
version = "0.1.0"
description = "Tools for a using Optuna with RDB storage in a fully containerized environment"
authors = ["Duane Goodner <dmgoodner@gmail.com>"]
license = "MIT"
include = ["license"]

package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
black = "^25.1.0"
dotenv = "^0.9.9"
isort = "^6.0.1"
optuna = "^4.2.1"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.6.12"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.xml]
output = "coverage.xml"

